# convo-porter

./: .gitignore  README.md  convo_porter.py  install.sh  pyproject.toml
claude/commands/: export-to-codex.md
codex/skills/export-to-claude/: SKILL.md
codex/skills/export-to-claude/agents/: openai.yaml
